--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
   },
   "dependencies": {
     "@next/font": "^14.2.3",
-    "github-user-repo-card": "^0.6.9",
     "is-mobile": "^4.0.0",
     "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-modern-drawer": "^1.4.0",
-    "react-smooth-scroll-hook": "^1.3.4"
+    "react-modern-drawer": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
