--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fiber-websirte",
 	"type": "module",
 	"version": "0.0.1",
+	"license": "MIT",
 	"scripts": {
 		"fmt": "biome format --write src/",
 		"lint": "biome lint --write src/",
