--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^4.1.0",
 		"@tailwindcss/vite": "^4.0.6",
 		"astro": "^5.3.0",
 		"tailwindcss": "^4.0.6"
